--- a/views/changepassword.ejs
+++ b/views/changepassword.ejs
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -12,18 +15,20 @@
     <h1>Request Password Reset</h1>
     <% if(user) { %>
         <form action="user/changepassword/" method="post">
-        <!-- <label for="otp">OTP:</label>
-        <input type="otp" name="otp" id="otp" required> -->
+        <label for="otp">OTP:</label>
+        <input type="otp" name="otp" id="otp" required/>
 
         <input type="password" name="password" id="password" value="" placeholder="New Password"/>
         <label for="password">password:</label>
 
+        <label for="email">Email:</label>
+
+        <input type="email" name="email" id="email" value="" placeholder="New Password" />
+       
+
         <input type="password" name="confirmpassword" id="confirmpassword" value="" placeholder="Confirm Password"/>
         <label for="password">confirmpassword:</label>
 
-        <label for="email">Email:</label>
-        <input type="email" name="email" id="email" required>
-        <button type="submit">Submit</button>
         </form>
        <% } else if (company) { %>
 
