--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,80 +14,54 @@
   <link rel="stylesheet" href="/css/style.css">
   
 </head>
+<style>
+  .centered-image-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 90vh;
+  }
+</style>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.3/dist/sweetalert2.all.min.js"></script>
 <body>
   <%- include('navbar') %>
-    <!-- <section class="sectionforlogin">
-      <div class="form-box">
-        <div class="form-value">
-          <form id="login-form" action='/api/login' method="post">
-            <h2>Login</h2>
-            <div class="inputbox">
-              <ion-icon name="mail-outline"></ion-icon>
-              <input type="text" name="email" id="email"  autocomplete="off" required/>
-              <label for="email">Email</label>           
-
-            </div>
-            <div class="inputbox">
-              <ion-icon name="lock-closed-outline"></ion-icon>
-              <input type="password"  name="password" id="password" autocomplete="off" required/>
-              <label for="password">Password</label>
-            </div>
-            <div class="forget">
-              <label for=""><input type="checkbox">Remember Me <a href="/forget">Forget Password</a></label>
-
-            </div>
-            <button id="login-button" type="submit">Log in</button>
-            <div class="register">
-              <t>Don't have a account <a href="/registeruser">RegisterUser</a><br>or &nbsp;<a
-                  href="/registercompany">RegisterCompany</a></p>
-            </div>
-
-            <div id="error-message" class="alert alert-danger" role="alert" style="display:none;"></div>
-          </form>
-        </div>
-      </div>
-    </section> -->
-    <section class="vh-100">
+    <section class="vh-90">
       <div class="container-fluid">
         <div class="row">
           <div class="col-sm-6 text-black">
-    
-            <div class="px-5 ms-xl-4">
-              <img src="image/FINDJOB-Photoroom.png-Photoroom.png" width="25%" alt="Description of the image">
-            </div>
     
             <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
     
               <form style="width: 30rem;"id="login-form" action='/api/login' method="post">
     
-                <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">ลงชื่อเข้าใช้งาน</h3>
+                <h3 class="mb-3 pb-3" style="letter-spacing: 1px;"><b>ลงชื่อเข้าใช้งาน</b></h3>
     
-                <div data-mdb-input-init class="form-outline mb-4">
-                  <input type="text" name="email" id="email"  class="form-control form-control-lg" placeholder="Email address" required/>
+                <div data-mdb-input-init class="form-outline mb-2">
+                  <input type="text" name="email" id="email"  class="form-control form-control-lg" placeholder="อีเมล" required/>
                 </div>
     
-                <div data-mdb-input-init class="form-outline mb-4">
-                  <input type="password" name="password" id="password" class="form-control form-control-lg" placeholder="password" required/>
+                <div data-mdb-input-init class="form-outline mb-2">
+                  <input type="password" name="password" id="password" class="form-control form-control-lg" placeholder="รหัสผ่าน" required/>
                 </div>
     
-                <div class="pt-1 mb-4">
+                <p class="small mb-1 text-end " ><a class="link-danger" href="/forget">ลืมรหัสผ่าน</a></p>
+                <div class="pt-1 mt-3 mb-4">
                   <button class="btn  w-100" style="color: #eeeeee ; background-color: #ED2A30;" id="login-button" type="submit">เข้าสู่ระบบ</button>
                 </div>
     
-                <p class="small mb-1 text-end" ><a class="text-muted" href="/forget" style="color: #ED2A30;" >ลืมรหัสผ่าน</a></p>
-                <p>ยังไม่ได้เป็นสมาชิก FINDJOB ใช่หรือไม่ ?<a href="/registeruser" class="link-info"> สมัครสมาชิกผู้ใช้งาน</a><br><a href="/registercompany" class="link-info">หรือ สมัครสมาชิกบริษัท</a></p>
+                <p class="text-center">ยังไม่ได้เป็นสมาชิก FINDJOB ใช่หรือไม่ ?<a href="/registeruser" class="link-danger"> สมัครสมาชิกผู้ใช้งาน</a><br><a href="/registercompany" class="link-danger">หรือ สมัครสมาชิกบริษัท</a></p>
     
               </form>
     
             </div>
     
           </div>
-          <div class="col-sm-6 px-0 d-none d-sm-block">
-            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img3.webp"
-              alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: left;">
-          </div>
+          <div class="col-sm-6 px-0 d-none d-sm-block" style="background-color: #FF3131;">
+            <div class="centered-image-container">
+                <img src="image/440603154_1504391717149277_9114663989814063800_n.png" alt="Login image" style="max-width: 100%; max-height: 100%;">
+            </div>
+        </div>
         </div>
       </div>
     </section>
