--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -368,10 +368,11 @@
   });
 
 </script>
+
 <div class="container-fluid" style="background-color: #fff;  border-bottom: 5px solid #FF3131;">
   <% if (status==="loggedIn" ) { %>
     <% if (user && user.status==="active" ) { %>
-      <div class="container-fluid d-flex justify-content-between align-items-center">
+      <div class="container d-flex justify-content-between align-items-center">
         <a class="navbar-brand" href="/">
           <div style="display: flex; flex-direction: column; align-items: center; color: #FF3131;">
             <img src="/image/FINDJOB-Photoroom.png-Photoroom (1).png" alt="Brand Image"
