--- a/views/registerCompany.ejs
+++ b/views/registerCompany.ejs
@@ -10,120 +10,98 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/style.css">
 </head>
-
+<style>
+  .centered-image-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 90vh;
+  }
+</style>
 <body>
   <%- include('navbar') %>
-    <section style="background-color: #eeeeee;">
-      <form action="/company/registercompany" method="post" enctype="multipart/form-data">
-
-        <div class="container py-5 h-100">
-          <p class="label-profile34"><b>Register</b></p>
-
-          <div class="row d-flex justify-content-center align-items-center h-100 width-100 ">
-            <div class="col col-lg-9 mb-4 mb-xl-0 ">
-              <div class="card mb-5" style="border-radius: .5rem;">
-                <div class="row ">
-                  <div class="col-md-3 gradient-custom22 text-center text-white"
-                    style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem; display: flex; flex-direction: column; justify-content: center;">
-                    <div>
-                      <img id="imagePreview" src="/image/default.png" alt="Avatar" class="img-fluid my-5 rounded-circle"
-                        style="width: 100px; height: 100px;" />
-                      <input type="file" id="image" name="image" accept="image/*" onchange="displayImage(event)">
-                      <button type="submit" class="btn btn-colorless">
-                        <i class="far fa-edit"></i> Submit
-                      </button>
-                    </div>
-                  </div>
-
-
-                  <div class="col-lg 9">
-                    <div class="card-body p-4">
-                      <h6>Information</h6>
-                      <hr class="mt-0 md-7">
-                      <div class="row pt-1">
-                        <div class="col-5 mb-4 ">
-                          <h6>Username</h6>
-                          <input type="text" name="username" id="username" class="form-control" required/>
-                        </div>
-                        <div class="col-5 mb-4">
-                          <h6>Email</h6>
-                          <input type="email" name="email" id="email" class="form-control" required/>
-                        </div>
-                      </div>
-
-                      <div class="row pt-1">
-                        <div class="col-5 mb-4">
-                          <h6>Password</h6>
-                          <input type="password" name="password" id="password" class="form-control"required />
-                        </div>
-                        <div class="col-5 mb-4">
-                          <h6>NameCompany</h6>
-                          <input type="text" name="name_company" id="name_company" class="form-control" required/>
-                        </div>
-
-                      </div>
-                      <div class="row pt-1">
-                        <div class="col-5 mb-3">
-                          <h6>TypeCompany</h6>
-                          <input type="text" name="type_company" id="type_company" class="form-control"required />
-                        </div>
-                        <div class="col-5 mb-3">
-                          <h6>CountyCompany</h6>
-                          <input type="text" name="county_company" id="county_company" class="form-control" required/>
-                        </div>
-                      </div>
-                      <div class="row pt-1">
-                        <div class="col-5 mb-3">
-                          <h6>ProvinceCompany </h6>
-                          <input type="text" name="province_company" id="province"
-                            class="form-control"required />
-                        </div>
-                        <div class="col-5 mb-3">
-                          <h6>namecontact_company</h6>
-                          <input type="text" name="namecontact_company" id="namecontact_company"
-                            class="form-control"required />
-                        </div>
-                      </div>
-                     <div class="row pt-1">
-                        <div class="col-5 mb-3">
-                          <h6>AmphoeCompany</h6>
-                          <input type="text" name="amphoe" id="amphoe" class="form-control"required />
-                        </div>
-                        <div class="col-5 mb-3">
-                          <h6>AddressCompany</h6>
-                          <input type="text" name="address_company" id="address_company"
-                            class="form-control"required />
-                        </div>
-                      </div>
-                      <div class="row pt-1">
-                        <div class="col-5 mb-3">
-                          <h6>DistrictCompany</h6>
-                          <input type="text" name="district_company" id="district"
-                            class="form-control"required />
-                        </div>
-                        <div class="col-5 mb-3">
-                          <h6>ZipCompany</h6>
-                          <input type="text" name="zipcode_company" id="zipcode"
-                            class="form-control"required />
-                        </div>
-                      </div>
-                      <div class="row pt-1">
-                        <div class="col-8 mb-3">
-                          <h6>TellCompany</h6>
-                          <input type="text" name="tell_company" id="tell_company" class="form-control"required />
-                        </div>
-                      </div>
-
-                    </div>
-
-                  </div>
-                </div>
+  <section class="vh-90">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-6 text-black">
+          <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
+            <form style="width: 30rem;" action='/company/registercompany' method="post"enctype="multipart/form-data">
+              <h3 class="mb-3 pb-3" style="letter-spacing: 1px;"><b>ลงทะเบียน</b></h3>
+              <div data-mdb-input-init class="form-outline mb-2">
+                <input type="email" name="email" id="email" class="form-control" placeholder="อีเมล" required/>
               </div>
+              <div data-mdb-input-init class="form-outline mb-2">
+                <input type="text" name="username" id="username" class="form-control"  placeholder="ชื่อผู้ใช้" required/>
+                 
+              </div>
+              <div data-mdb-input-init class="form-outline mb-2">
+                <input type="password" name="password" id="password" class="form-control"placeholder="รหัสผ่าน" required />
+              </div>
+              <div data-mdb-input-init class="form-outline mb-2">
+                <input type="text" name="name_company" id="name_company" class="form-control" placeholder="ชื่อบริษัท" required/>
+              </div>
+              <div data-mdb-input-init class="form-outline mb-2">
+                <input type="text" name="namecontact_company" id="namecontact_company"
+                class="form-control"placeholder="ชื่อผู้ติดต่อ" required />
+              </div>
+              <div data-mdb-input-init class="form-outline mb-2">
+                <input type="text" name="type_company" id="type_company" class="form-control"placeholder="ประเภทบริษัท" required />
+              </div>
+              <div class="row">
+                <div class="col-md-6 mb-2">
+                    <div data-mdb-input-init class="form-outline">
+                        <input type="text" name="county_company" id="county_company" class="form-control"  required placeholder="ประเทศ"/>
+                    </div>
+                </div>
+                <div class="col-md-6 mb-2">
+                    <div data-mdb-input-init class="form-outline">
+                        <input type="text" name="province_company" id="province" class="form-control" required placeholder="จังหวัด"/>
+                    </div>
+                </div>
             </div>
+            <div class="row">
+                <div class="col-md-6 mb-2">
+                    <div data-mdb-input-init class="form-outline">
+                        <input type="text" name="amphoe" id="amphoe" class="form-control"  required placeholder="อำเภอ/เขต"/>
+                    </div>
+                </div>
+                <div class="col-md-6 mb-2">
+                    <div data-mdb-input-init class="form-outline">
+                        <input type="text" name="address_company" id="address_company" class="form-control"  required placeholder="ที่อยู่"/>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 mb-2">
+                    <div data-mdb-input-init class="form-outline">
+                        <input type="text" name="district_company" id="district" class="form-control"  required placeholder="ตำบล/แขวง"/>
+                    </div>
+                </div>
+                <div class="col-md-6 mb-2">
+                    <div data-mdb-input-init class="form-outline">
+                        <input type="text" name="zipcode_company" id="zipcode" class="form-control" required placeholder="รหัสไปรษณีย์"/>
+                    </div>
+                </div>
+            </div>
+              <div data-mdb-input-init class="form-outline mb-2">
+                <input type="text" name="tell_company" id="tell_company" class="form-control"placeholder="เบอร์โทร" required />
+              </div>
+              <div class="pt-1 mt-3">
+                <button class="btn  w-100" style="color: #eeeeee ; background-color: #ED2A30;"
+                  id="login-button" type="submit">ยืนยัน</button>
+              </div>
+            </form>
           </div>
         </div>
-      </form>
-    </section>
+        <div class="col-sm-6 px-0 d-none d-sm-block" style="background-color: #FF3131;">
+          <div class="centered-image-container">
+              <img src="image/440603154_1504391717149277_9114663989814063800_n.png" alt="Login image" style="max-width: 100%; max-height: 100%;">
+          </div>
+      </div>
+      </div>
+    </div>
+  </section>
+
 
     <script type="text/javascript"
     src="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dependencies/JQL.min.js"></script>
