--- a/views/registerUser.ejs
+++ b/views/registerUser.ejs
@@ -6,24 +6,22 @@
   <meta http-equiv="X-UA-Compatible" content="chrome">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>registerUser</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.3/dist/sweetalert2.all.min.js"></script>
   <link rel="stylesheet" href="/css/style.css">
 </head>
-<script>
-  var passConfirm = function () {
-    if (document.getElementById("password").value ==
-      document.getElementById("confirmpassword").value) {
-      document.getElementById("Message").style.color = "Green";
-      document.getElementById("Message").innerHTML = "Passwords match!"
-    } else {
-      document.getElementById("Message").style.color = "Red";
-      document.getElementById("Message").innerHTML = "Passwords do NOT match!"
-    }
-  }  
-</script>
-
+<style>
+  .centered-image-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 90vh;
+  }
+</style>
 <body>
 
   <%- include('navbar') %>
@@ -35,92 +33,67 @@
             icon: 'warning',
           })
         </script>
-        <%})%>
-          <%} else if (locals.success) { %>
-            <script type="text/javascript">
-              Swal.fire({
-                title: "<%= success  %>",
-                icon: 'success',
-              })
-            </script>
-            <%}%>
-            <div class="container col-lg-6">
-            <div class="card" >
-              <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/182.webp" class="card-img-top" alt="Sunset Over the Sea"/>
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <%})%>
+    <%} else if (locals.success) { %>
+        <script type="text/javascript">
+          Swal.fire({
+            title: "<%= success  %>",
+            icon: 'success',
+          })
+        </script>
+    <%}%>
+  <section class="vh-90">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-6 text-black">
+          <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
+            <form style="width: 30rem;" action='/user/registeruser' method="post" enctype="multipart/form-data">
+              <h3 class="mb-3 pb-3" style="letter-spacing: 1px;"><b>ลงทะเบียน</b></h3>
+              <div data-mdb-input-init class="form-outline mb-2">
+                <input type="text" name="email" id="email" class="form-control "
+                  placeholder="อีเมล" required />
               </div>
-            </div>
+              <div data-mdb-input-init class="form-outline mb-2">
+                <input type="text" name="username" class="form-control " id="username"
+                  placeholder="ชื่อผู้ใช้" />
+              </div>
+              <div data-mdb-input-init class="form-outline mb-2">
+                <input type="password" name="password" id="password" class="form-control   "
+                  placeholder="รหัสผ่าน" onkeyup='passConfirm();' required />
+                <small id="message" style="color:red"> </small>
+              </div>
+              <div data-mdb-input-init class="form-outline mb-2">
+                <input type="password" name="confirm_password" id="confirmpassword"
+                  class="form-control " value="" placeholder="ยืนยันรหัสผ่าน" onkeyup='passConfirm();'
+                  required />
+                <small id="Message" style="color:red"> </small>
+              </div>
+              <div class="pt-1 mt-4">
+                <button class="btn  w-100" style="color: #eeeeee ; background-color: #ED2A30;"
+                  id="login-button" type="submit">ยืนยัน</button>
+              </div>
+            </form>
           </div>
-
-                <p class="d-flex justify-content-center"><b>Register</b></p>
-                <form action="/user/registeruser" method="post" enctype="multipart/form-data">
-                      <div class="col col-lg-6 mb-4 mb-lg-0 ">
-                        <div class="card mb-3" style="border-radius: .5rem;">
-                          <div class="row g-0">
-                            <div class="col-md-5 gradient-custom11 text-center text-white"
-                              style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem; display: flex; flex-direction: column; justify-content: center;">
-                              <div>
-                                <img id="imagePreview" src="/image/default.png" alt="Avatar"
-                                  class="img-fluid my-5 rounded-circle" style="width: 100px; height: 100px;" />
-                                <input type="file" id="image" name="image" accept="image/*" class="ms-4"
-                                  onchange="displayImage(event)">
-                                <button type="submit" class="btn btn-colorless ">
-                                  <i class="far fa-edit"></i> Submit
-                                </button>
-                              </div>
-                            </div>
-                            <div class="col-md-5">
-                              <div class="card-body p-4">
-                                <h6>Information</h6>
-                                <hr class="mt-0 mb-4">
-                                <div class="row pt-1">
-                                  <input type="text" name="username" class="form-control ms-2" id="username" placeholder="username" />
-                                </div>
-                                <div class="row pt-1">
-                                  <input type="text" name="email" class="form-control ms-2" id="email" placeholder="email" required />
-                                </div>
-
-                                <div class="row pt-1">
-
-                                  <input type="password" name="password" id="password" class="form-control ms-2  "
-                                    placeholder="New Password" onkeyup='passConfirm();' required />
-                                  <small id="message" style="color:red"> </small>
-
-                                </div>
-                                <div class="row pt-1">
-                                  <input type="password" name="confirm_password" id="confirmpassword"
-                                    class="form-control ms-2" value="" placeholder="Confirm Password"
-                                    onkeyup='passConfirm();' required/>
-                                  <small id="Message" style="color:red"> </small>
-                                </div>
-
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-
-                </form>
-
+        </div>
+        <div class="col-sm-6 px-0 d-none d-sm-block" style="background-color: #FF3131;">
+          <div class="centered-image-container">
+              <img src="image/440603154_1504391717149277_9114663989814063800_n.png" alt="Login image" style="max-width: 100%; max-height: 100%;">
+          </div>
+      </div>
+      </div>
+    </div>
+  </section>
+  <script>
+    var passConfirm = function () {
+      if (document.getElementById("password").value ==
+        document.getElementById("confirmpassword").value) {
+        document.getElementById("Message").style.color = "Green";
+        document.getElementById("Message").innerHTML = "Passwords match!"
+      } else {
+        document.getElementById("Message").style.color = "Red";
+        document.getElementById("Message").innerHTML = "Passwords do NOT match!"
+      }
+    }  
+  </script>
 </body>
-                <script>
-                  function displayImage(event) {
-                    const imagePreview = document.getElementById('imagePreview');
-                    const file = event.target.files[0];
-
-                    if (file) {
-                      const reader = new FileReader();
-
-                      reader.onload = function (e) {
-                        imagePreview.src = e.target.result;
-                      }
-
-                      reader.readAsDataURL(file);
-                    } else {
-                      imagePreview.src = '/image/default.png'; // Set default image
-                    }
-                  }
-                </script>
-
 </html>
